--- a/reports/installation.xml
+++ b/reports/installation.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?xml-stylesheet type="text/xsl" href="../bootstrap_phpcs.xsl"?>
 <phpcs version="1.4.5">
  <file name="/installation/model/setup.php" errors="0" warnings="1">
   <warning line="315" column="168" source="Generic.Files.LineLength.TooLong" severity="5">Line exceeds 150 characters; contains 167 characters</warning>
